# yin

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  yin.md
examples/: hello_world.rs
src/: concept.rs  concepts.rs  graph.rs  lib.rs  node_wrappers.rs  wrapper.rs  wrappers.rs
src/concepts/: archetype.rs  archetype_trait.rs  attributes.rs  form.rs  form_trait.rs  init.rs  mod.rs  owner.rs  tao.rs  value.rs
src/concepts/archetype/: archetype_form.rs  archetype_form_trait.rs  archetype_trait.rs  attribute_archetype_form.rs  mod.rs
src/concepts/archetype/attribute/: attribute_archetype_form.rs  (+2 more)
src/concepts/attributes/: attribute_archetype.rs  attribute_trait.rs  has_attribute_type.rs  inherits.rs  mod.rs  owner.rs  owner_archetype.rs  value.rs  value_archetype.rs
src/graph/: cypher_graph.rs  in_memory_graph.rs  injection_graph.rs  invalid_graph.rs  kb_wrapper.rs  mod.rs  value_wrappers.rs
src/node_wrappers/: base_node.rs  final_node.rs  inheritance_node.rs
src/tao/: auto_init.rs  form_form.rs  form_trait.rs  init.rs  mod.rs  tao_form.rs
src/tao/archetype/: archetype_form.rs  archetype_form_extension_trait.rs  archetype_form_trait.rs  archetype_trait.rs  attribute_archetype_form.rs  attribute_archetype_form_trait.rs  mod.rs
src/tao/attribute/: attribute_form.rs  attribute_trait.rs  has_attribute_type_form.rs  inherits_form.rs  mod.rs  owner_archetype_form.rs  owner_form.rs  value_archetype_form.rs  value_form.rs
src/tao/form/: form_extension.rs  form_form.rs  form_trait.rs  mod.rs
src/tao/relation/: mod.rs  relation_form.rs
src/wrappers/: base_wrapper.rs  final_wrapper.rs  inheritance_wrapper.rs
(+25 files in other folders)
