[package]
name = "yin"
version = "0.0.1"
authors = ["Amos Jun-yeung Ng <me@amos.ng>"]
edition = "2018"
description = "A basic, experimental knowledge-base"
readme = "README.md"
repository = "https://github.com/amosjyng/yin"
license = "GPL-3.0"
keywords = ["database", "knowledge-base"]
categories = ["database"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
