[package]
name = "zamm_yin"
version = "0.1.0-beta"
authors = ["Amos Jun-yeung Ng <me@amos.ng>"]
edition = "2018"
description = "A basic, experimental knowledge-base"
readme = "README.md"
repository = "https://github.com/amosjyng/yin"
license = "GPL-3.0"
keywords = ["database", "knowledge-base"]
categories = ["database"]

[features]
default = ["cypher"]
cypher = ["rusted_cypher"]

[dependencies]
petgraph = "^0.5.1"
rusted_cypher = { version = "^1.1.0", optional = true }

[build-dependencies]
zamm = {path = "/Users/amos/Documents/zamm/zamm"}
